--- a/Stock/packages.config
+++ b/Stock/packages.config
@@ -22,5 +22,10 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
+  <package id="SimpleInjector" version="4.0.12" targetFramework="net461" />
+  <package id="SimpleInjector.Integration.Web" version="4.0.12" targetFramework="net461" />
+  <package id="SimpleInjector.Integration.Web.Mvc" version="4.0.12" targetFramework="net461" />
+  <package id="SimpleInjector.MVC3" version="4.0.12" targetFramework="net461" />
+  <package id="WebActivator" version="1.4.4" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
